feat: temp type selector

--- a/src/lib/i18n/en/common.json
+++ b/src/lib/i18n/en/common.json
@@ -2,5 +2,9 @@
   "actions": {
     "next": "Next",
     "back": "Back"
+  },
+  "labels": {
+    "location": "Location",
+    "format": "Format"
   }
 }
